force-app/main/default/objects/WinaproachIncidentSeverityMapping__c/WinaproachIncidentSeverityMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Win@proach Severity field mapping with Salesforce field values. &quot;Default&quot; mapping referred.</description>
    <label>Win@proach Incident Severity Mapping</label>
</CustomObject>