force-app/main/default/objects/WinaproachIncidentSeverityMapping__c/fields/X2__c.field-meta.xml
<CustomField>
    <fullName>X2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>