force-app/main/default/objects/WinaproachIncidentSeverityMapping__c/fields/X2_Urgent__c.field-meta.xml
<CustomField>
    <fullName>X2_Urgent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2 Urgent</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>