force-app/main/default/objects/WinaproachIncidentSeverityMapping__c/fields/X4__c.field-meta.xml
<CustomField>
    <fullName>X4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>4</label>
    <length>2</length>
    <type>Text</type>
</CustomField>